# auditoria

./: .gitignore  DB_CUSTO.xlsx  README.md
backend/: .gitignore  README.md  config.yml  env.example  main.py  pyproject.toml  requirements.txt  run_bootstrap.bat  run_sync.bat
backend/app/: sync_service.py
backend/app/audit/: models.py  writer.py
backend/app/automation/: __init__.py  config_store.py  edge_sync.py  models.py  pre_sync_sql.py  runner.py  table_profile.py  task_scheduler.py  window_policy.py
backend/app/cli/: app.py
backend/app/config/: loader.py  models.py
backend/app/connectors/: db.py
backend/app/ddl/: migrator.py
backend/app/ddl/sql/: V001__extensions_and_schemas.sql  V002__authz.sql  V003__audit.sql  V004__app_tables.sql  V005__staging_tables.sql  V006__indexes.sql  V007__security_functions.sql  V008__rls_policies.sql  V009__promote_helpers.sql  V010__timezone_brasilia_defaults.sql  V011__quantities_to_integer.sql  (+408 more)
backend/app/etl/: table_specs.py
backend/app/gui/: __init__.py  actions.py  tk_app.py  viewmodels.py
backend/app/refresh/: excel_refresh.py
backend/app/security/: policy_sql.py
backend/app/utils/: hashers.py  json_safe.py  logging.py  machine_id.py  paths.py  timezone.py
backend/edge_function/: README.md
backend/scripts/: convert_heavy_xlsx_to_csv.py  import_ctrl_validade_linha_coletas_csv.py
backend/supabase/.temp/: pooler-url  project-ref
backend/tests/: test_edge_sync.py  test_normalize_gestao_estq.py  test_runner_helpers.py  test_table_rules.py  test_task_scheduler.py  test_window_policy.py
docs/: 404.html  (+13 more)
(+1049 files in other folders)
