[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supabase-sync-backend"
version = "1.0.0"
description = "Production-grade local files sync backend for Supabase Postgres"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.0",
  "openpyxl>=3.1.0",
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.6.0",
  "loguru>=0.7.0",
  "typer>=0.12.0",
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
excel-refresh = [
  "xlwings>=0.30.0",
  "pywin32>=306",
]

[project.scripts]
sync-backend = "app.cli.app:run"

[tool.setuptools]
include-package-data = true